Quebrando linha no h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jogo em JS
-        
+
     </title>
 </head>
 
@@ -23,7 +23,10 @@
         <div class="container__conteudo">
             <div class="container__informacoes">
                 <div class="container__texto">
-                    <h1>Descubra o <span class="container__texto-azul">número secreto</span></h1>
+                    <h1>
+                        Descubra o <span class="container__texto-azul">número secreto
+                            
+                        </span></h1>
 
                     <p class="texto__paragrafo">Escolha um número entre 1 a 40</p>
                 </div>
